# Call-me-maybe

./: .gitignore  Makefile  README.md  call_me_maybe.py  pyproject.toml  test_type_validation.py
src/: __init__.py  __main__.py  constrained_decoder.py  decoder.py  engine.py  file_handler.py  function_selector.py  models.py
src/data/input/:  function_calling_tests.json   function_definitions.json  functions_definition.json
src/data/llm_sdk/llm_sdk/: __init__.py
src/data/output/: function_calling_results.json
