[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.9.2",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "torch>=2.11.0",
    "transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
]

[[tool.mypy.overrides]]
module = ["llm_sdk.*"]
ignore_errors = true
